--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
      <body>
-<Table border=1 width=100% bgcolor=blue>
+ <Table border=1 width=100% bgcolor=blue>
     <Tr>
     <Td><h2><font color="#040303">Inicio</font></h2></Td>
     <Td><h2><font color="#040303">Coltan</font></h2></Td>
@@ -31,7 +31,7 @@
          inestabilidad en los terrenos al dejar las formaciones rocosas al descubiertom, pueden ocasionar el desencadenamiento de fenomenos erosivos.
          Por estas cosas se ve afectado el pais.      
       </p>
-        <img src="mineriacolombiana.jpg"
+        <img src="mineriacolombiana.jpg" height="400"/>
          
       
 
@@ -44,3 +44,4 @@
           </p>
      </body>
 <html>
+
